<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title = "Register"
        app:titleTextColor="@color/white"
        android:background="@color/blue"
        app:navigationIcon="@drawable/back"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/register"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/register_create_account_toolbar"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint = "Email Number"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/welcome_password_hint"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/make_sure_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "Repeat Password"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        />


    <Button
        android:id="@+id/register_create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register_create_account_button"
        android:textSize="20sp"
        android:gravity="center_horizontal|center_vertical"
        />

</LinearLayout>